--- a/visualexploration.Rmd
+++ b/visualexploration.Rmd
@@ -63,93 +63,105 @@ fullpct <- ggplot(data = data, aes(x=full_time_pct)) +
                   geom_histogram(bins = 20, fill = "blue", color = "orange")+
                   labs(x="Fulltime Student Percentage")+
                   theme_light()
-fullpct
-```
 
-```{r}
 fullcount <- ggplot(data = data, aes(x=full_time_count)) +
                     geom_histogram(bins = 20, fill = "blue", color = "orange")+
                     labs(x="Fulltime Student Count")+
                     theme_light()
-fullcount
-```
 
-```{r}
 medsat <- ggplot(data = data, aes(x=med_sat_value)) +
                  geom_histogram(bins = 20, fill = "blue", color = "orange")+
                  labs(x="Median SAT Score")+
                  theme_light()
-medsat
-```
-
-```{r}
 aid <- ggplot(data = data, aes(x=aid_value)) +
               geom_histogram(bins = 30, fill = "blue", color = "orange")+
               labs(x="Aid Value")+
               theme_light()
-aid
+
+# now plot all these together
+cowplot::plot_grid(fullpct, fullcount, medsat, aid,
+                   labels = "AUTO",
+                   label_size = 18,
+                   align = "hv")
 ```
+
+A: 
+
+B:
+
+C:
+
+D:
 
 ```{r}
 gradtime <- ggplot(data = data, aes(x=grad_on_time_pct)) +
                    geom_histogram(bins = 20, fill = "blue", color = "orange")+
                    labs(x="Graduating on Time")+
                    theme_light()
-gradtime
-```
 
-```{r}
 pell <- ggplot(data = data, aes(x=pell_value)) +
                geom_histogram(bins = 20, fill = "blue", color = "orange")+
                labs(x="Pell Value")+
                theme_light()
-pell
-```
 
-```{r}
 fresh <- ggplot(data = data, aes(x=fresh_retain_value)) +
                 geom_histogram(binwidth = 0.025, fill = "blue", color = "orange")+
                 labs(x="Freshman Retainment")+
                 theme_light()
-fresh
-```
 
-```{r}
 fullfac <- ggplot(data = data, aes(x=full_time_fac_pct)) +
                   geom_histogram(bins = 20, fill = "blue", color = "orange")+
                   labs(x="Full Time Faculty")+
                   theme_light()
-fullfac
+
+# now plot all these together
+cowplot::plot_grid(gradtime, pell, fresh, fullfac,
+                   labels = "AUTO",
+                   label_size = 18,
+                   align = "hv")
 ```
+
+A: 
+
+B:
+
+C:
+
+D:
 
 ```{r}
 endowspend <- ggplot(data = data, aes(x=EndowXSpend)) +
                      geom_histogram(bins = 50, fill = "blue", color = "orange")+
                      xlim(0,1000000000)+
                      theme_light()
-endowspend
-```
 
-```{r}
 pellsat <- ggplot(data = data, aes(x=PellXSat)) +
                   geom_histogram(bins = 20, fill = "blue", color = "orange")+
                   theme_light()
-pellsat
-```
 
-```{r}
 retainsat <- ggplot(data = data, aes(x=RetainXSat)) +
                     geom_histogram(bins = 20, fill = "blue", color = "orange")+
                     theme_light()
-retainsat 
-```
 
-```{r}
 aidsat <- ggplot(data = data, aes(x=AidXSat)) +
                  geom_histogram(bins = 20, fill = "blue", color = "orange")+
                  theme_light()
-aidsat
+
+# now plot all these together
+cowplot::plot_grid(endowspend, pellsat, retainsat, aidsat,
+                   labels = "AUTO",
+                   label_size = 18,
+                   align = "hv")
+
 ```
+
+A: 
+
+B:
+
+C:
+
+D:
 
 ```{r}
 aidendow <- ggplot(data = data, aes(x=AidXEndow)) +
