commiting linear lining.

--- a/classifier.Rmd
+++ b/classifier.Rmd
@@ -66,13 +66,14 @@ training_with_predictions <- add_predictions(training_without_outliers, model.10
 training_with_predictions %>% 
   ggplot(aes(x = grad_rate, y = pred_grad_rate)) +
   geom_point() + 
+  geom_smooth(method = "lm") + 
   geom_rug() +
   theme_light()
 
 #histogram of scaled predictions
 training_with_predictions %>% 
   ggplot() +
-  geom_histogram(aes(x = scaled), bins = 25)
+  geom_histogram(aes(x = pred_grad_rate), bins = 25)
 ```
 
 ```{r}
@@ -85,6 +86,7 @@ testing_with_predictions <- add_predictions(testing, model.10, var = "pred_grad_
 testing_with_predictions %>% 
   ggplot(aes(x = grad_rate, y = pred_grad_rate)) +
   geom_point() + 
+  geom_smooth(method = "lm") + 
   geom_rug() +
   theme_light()
 
@@ -97,7 +99,6 @@ testing_with_predictions %>%
   labs(caption = "Red line is BC actual graduation rate,
   Blue line is BC predicted grad rate")
   
-
 #testing_with_predictions %>% filter(institution_name == "Bellevue College")
 ```
 
