--- a/classifier.Rmd
+++ b/classifier.Rmd
@@ -58,33 +58,81 @@ model.10 <- lm(grad_rate ~ spending_per_award
 
 ```{r add predictions back to training set}
 training_with_predictions <- add_predictions(training_without_outliers, model.10, var = "pred_grad_rate") %>% 
+  add_residuals(model = model.10, var = "resid") %>% 
   #and we dont need these other variables either
-  dplyr::select(-resid, -sdev, -std.norm, -abs.std) %>% 
+  dplyr::select(-sdev, -std.norm, -abs.std) %>% 
   mutate(scaled = scale(pred_grad_rate))
-
-#and a quick visual of known graduation to predicuted graduation
-training_with_predictions %>% 
-  ggplot(aes(x = grad_rate, y = pred_grad_rate)) +
-  geom_point() + 
-  geom_smooth(method = "lm") + 
-  geom_rug() +
-  theme_light()
-
-#histogram of scaled predictions
-training_with_predictions %>% 
-  ggplot() +
-  geom_histogram(aes(x = pred_grad_rate), bins = 25) +
-  theme_light() 
 ```
 
 ```{r}
-testing_with_predictions <- add_predictions(testing, model.10, var = "pred_grad_rate") %>% 
+#and a quick visual of known graduation to predicuted graduation
+training_predictions_scatter <- training_with_predictions %>% 
+  ggplot(aes(x = grad_rate, y = pred_grad_rate)) +
+  geom_point() + 
+  geom_smooth(method = "lm") + 
+  geom_rug() +
+  theme_light()
+
+training_predictions_boxplot <- training_with_predictions %>% 
+  arrange(basic) %>% 
+  #mutate(TRUE == TRUE) %>% 
+         #instituion_type = str_sub(basic, start = 1L, end = 5L),
+         #instituion_type = case_when(instituion_type == "Assoc" ~ "Associates",
+          #                           instituion_type == "Bacca" ~ "Baccalaureate",
+          #                           instituion_type == "Docto" ~ "Doctoral",
+          #                           instituion_type == "Maste" ~ "Masters",
+          #                           instituion_type == "Resea" ~ "Research",
+          #                           instituion_type == "Schoo" ~ "Specialty",
+          #                           instituion_type == "Triba" ~ "Tribal")) %>% 
+  ggplot(aes(y = pred_grad_rate, x = "x")) +
+  geom_boxplot() + 
+  geom_jitter(alpha = 0.2, width = .09) +
+  theme_light()
+
+#histogram of scaled predictions
+training_predictions_histogram <- training_with_predictions %>% 
+  ggplot() +
+  geom_histogram(aes(x = pred_grad_rate), bins = 25) +
+  theme_light() 
+
+training_pred_vs_resids <- training_with_predictions %>% 
+  ggplot() +
+  geom_point(aes(x = pred_grad_rate, y = resid)) +
+  theme_light() +
+  labs(title = "",
+       subtitle = "")
+
+training_predictions_scatter
+training_predictions_boxplot
+training_predictions_histogram
+cowplot::plot_grid(training_predictions_scatter, 
+                   training_predictions_boxplot, 
+                   training_predictions_histogram,
+                   training_pred_vs_resids,
+                   labels = c("A", "B", "C", "D"))
+```
+
+```{r}
+testing_with_predictions <- add_predictions(testing, model = model.10, var = "pred_grad_rate") %>% 
+  add_residuals(model = model.10, var = "resid") %>% 
   #and we dont need these other variables either
   #dplyr::select(-resid, -sdev, -std.norm, -abs.std) %>% 
-  mutate(scaled = scale(pred_grad_rate))
+  mutate(scaled_act = scale(grad_rate), 
+         scaled_pred = scale(pred_grad_rate),
+         classification = factor(case_when(scaled_pred <= (-3) ~ "Poor",
+                                           scaled_pred <= (-2) ~ "Below Average",
+                                           scaled_pred <= (1) ~ "Average",
+                                           scaled_pred <= (2) ~ "Above Average",
+                                           scaled_pred > (2) ~ "Excellent"),
+                                 levels = c("Excellent", "Above Average", "Average", "Below Average", "Poor"))
+         ) %>% 
+  arrange(pred_grad_rate)
+```
 
+
+```{r}
 #and a quick visual of known graduation to predicuted graduation
-testing_with_predictions %>% 
+testing_predictions_scatter <- testing_with_predictions %>% 
   ggplot(aes(x = grad_rate, y = pred_grad_rate)) +
   geom_point() + 
   geom_smooth(method = "lm") + 
@@ -92,16 +140,64 @@ testing_with_predictions %>%
   theme_light()
 
 #histogram of scaled predictions
-testing_with_predictions %>% 
+testing_predictions_histogram <- testing_with_predictions %>% 
   ggplot() +
   geom_histogram(aes(x = pred_grad_rate), bins = 25) +
-  geom_vline(aes(xintercept = 0.2162771), color = "blue") +
-  geom_vline(aes(xintercept = 0.195), color = "red") +
-  theme_light() +
-  labs(caption = "Red line is BC actual graduation rate,
-  Blue line is BC predicted grad rate")
-  
+  theme_light()
+
+testing_predictions_boxplot <- testing_with_predictions %>% 
+  arrange(basic) %>% 
+  #mutate(TRUE == TRUE) %>% 
+         #instituion_type = str_sub(basic, start = 1L, end = 5L),
+         #instituion_type = case_when(instituion_type == "Assoc" ~ "Associates",
+          #                           instituion_type == "Bacca" ~ "Baccalaureate",
+          #                           instituion_type == "Docto" ~ "Doctoral",
+          #                           instituion_type == "Maste" ~ "Masters",
+          #                           instituion_type == "Resea" ~ "Research",
+          #                           instituion_type == "Schoo" ~ "Specialty",
+          #                           instituion_type == "Triba" ~ "Tribal")) %>% 
+  ggplot(aes(y = pred_grad_rate, x = "x")) +
+  geom_boxplot() + 
+  geom_jitter(alpha = 0.2, width = .09) +
+  theme_light()
+
+testing_pred_vs_resids <- testing_with_predictions %>% 
+  ggplot() +
+  geom_point(aes(x = pred_grad_rate, y = resid)) +
+  theme_light()
+
+#testing_predictions_boxplot
+#testing_predictions_scatter
+#testing_predictions_histogram
+
+cowplot::plot_grid(testing_predictions_scatter, 
+                   testing_predictions_boxplot, 
+                   testing_predictions_histogram, 
+                   testing_pred_vs_resids,
+                   labels = c("A", "B", "C", "D"))
+
 #testing_with_predictions %>% filter(institution_name == "Bellevue College")
+```
+
+
+```{r}
+vlines <- as.matrix(testing_with_predictions %>% 
+                      filter(institution_name == "Bellevue College") %>% 
+                      select(scaled_pred, scaled_act))
+
+testing_with_predictions %>% 
+  ggplot() +
+  geom_histogram(aes(x = scaled_pred, fill = classification), binwidth = .15) +
+ # scale_fill_gradient2(low = "red", mid = "grey", high = "green",midpoint = mpgr) +
+  geom_vline(aes(xintercept = vlines[1]), color = "blue") +
+  geom_vline(aes(xintercept = vlines[2]), color = "red") +
+  theme_light() +
+  theme(legend.position="none") +
+  labs(title = "Histogram of Graduation Predictions",
+       subtitle = "BC shows Average rates for both actual and prediction",
+       x = "Predicted Graduation Rate",
+       caption = "Red line is BC actual graduation rate,
+  Blue line is BC predicted grad rate")
 ```
 
 
